cmake_minimum_required(VERSION 3.31)
project(snmplib C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(openssl)
include_directories(transports)

add_executable(snmplib
        openssl/openssl_aes_cfb.c
        openssl/openssl_aes_core.c
        openssl/openssl_aes_local.h
        openssl/openssl_cbc_enc.c
        openssl/openssl_cfb128.c
        openssl/openssl_des_enc.c
        openssl/openssl_des_local.h
        openssl/openssl_md32_common.h
        openssl/openssl_md5.c
        openssl/openssl_md5_local.h
        openssl/openssl_modes.h
        openssl/openssl_ncbc_enc.c
        openssl/openssl_set_key.c
        openssl/openssl_sha.h
        openssl/openssl_sha1.c
        openssl/openssl_sha_local.h
        openssl/openssl_spr.h
        transports/snmpAAL5PVCDomain.c
        transports/snmpAliasDomain.c
        transports/snmpCallbackDomain.c
        transports/snmpDTLSUDPDomain.c
        transports/snmpIPBaseDomain.c
        transports/snmpIPBaseDomain.h
        transports/snmpIPv4BaseDomain.c
        transports/snmpIPv6BaseDomain.c
        transports/snmpIPXDomain.c
        transports/snmpSocketBaseDomain.c
        transports/snmpSSHDomain.c
        transports/snmpSTDDomain.c
        transports/snmpTCPBaseDomain.c
        transports/snmpTCPDomain.c
        transports/snmpTCPIPv6Domain.c
        transports/snmpTLSBaseDomain.c
        transports/snmpTLSTCPDomain.c
        transports/snmpUDPBaseDomain.c
        transports/snmpUDPDomain.c
        transports/snmpUDPIPv4BaseDomain.c
        transports/snmpUDPIPv6Domain.c
        transports/snmpUDPsharedDomain.c
        transports/snmpUnixDomain.c
        asn1.c
        asprintf.c
        callback.c
        cert_util.c
        check_varbind.c
        closedir.c
        container.c
        container_binary_array.c
        container_iterator.c
        container_list_ssll.c
        container_null.c
        data_list.c
        default_store.c
        dir_utils.c
        factory.h
        fd_event_manager.c
        file_utils.c
        getopt.c
        gettimeofday.c
        inet_ntop.c
        inet_ntop.h
        inet_pton.c
        inet_pton.h
        int64.c
        keytools.c
        large_fd_set.c
        lcd_time.c
        md5.c
        memcheck.h
        mib.c
        mt_support.c
        oid_stash.c
        opendir.c
        parse.c
        pkcs.c
        read_config.c
        readdir.c
        scapi.c
        sd-daemon.c
        snmp-tc.c
        snmp.c
        snmp_alarm.c
        snmp_api.c
        snmp_auth.c
        snmp_client.c
        snmp_debug.c
        snmp_enum.c
        snmp_logging.c
        snmp_openssl.c
        snmp_parse_args.c
        snmp_secmod.c
        snmp_service.c
        snmp_syslog.h
        snmp_transport.c
        snmp_version.c
        snmpksm.c
        snmptsm.c
        snmpusm.c
        snmpv3.c
        snprintf.c
        snprintf.h
        strlcat.c
        strlcpy.c
        strtok_r.c
        strtol.c
        strtoul.c
        strtoull.c
        system.c
        text_utils.c
        tools.c
        ucd-snmp-includes.h
        ucd_compat.c
        vacm.c
        winpipe.c
        winservice.c)
